# QuaRUM

./: README.md  checkpoints.py  config.py  main.py  pipeline.py  pyproject.toml  requirements.txt  setup.py  test_pipeline.py
confidence_scoring/: scorer.py
data/requirements/Personalized Learning Platform/: plp.txt
data/requirements/healthcare/: sm.txt
dataset/: Iot.txt  LibraryTest.txt
domain_modeler/: __init__.py  cli.py
domain_modeler/config/: __init__.py  settings.py
domain_modeler/core/: __init__.py  code.py  code_system.py  relationship.py
domain_modeler/generators/: __init__.py  plantuml.py  report.py
domain_modeler/nlp/: __init__.py  prompt_builder.py
domain_modeler/phases/: __init__.py  axial_coding.py  open_coding.py  phase_utils.py  selective_coding.py
domain_modeler/pipelines/: __init__.py  domain_modeling.py
domain_modeler/utils/: __init__.py  data_loader.py  json_parsing.py  llm_client.py  validation.py
examples/: simple_modeling.py
model_bundle/: __init__.py  exporter.py  schema.py
output/bundles/: Iot_bundle.json
output/plantuml/: Iot.puml
output/vector_store/Iot/: index.faiss  meta.pkl
phase1_document_processing/: __init__.py  cleaner.py  ingestion.py  metadata_attacher.py  segmenter.py
phase2_knowledge_construction/: __init__.py  embedder.py  retriever.py  vector_store.py
phase3_model_generation/: __init__.py
phase3_model_generation/axial_coding/: __init__.py  axial_coder.py  prompts.py  trigger_detector.py
phase3_model_generation/open_coding/: __init__.py  merger.py  open_coder.py  prompts.py
phase3_model_generation/selective_coding/: __init__.py  prompts.py  selective_coder.py  ticket_manager.py
phase4_uml_generation/: __init__.py  layout_optimizer.py  plantuml_generator.py
quarum/: __init__.py  cli.py
quarum/config/: __init__.py  prompts.py  settings.py
quarum/core/: __init__.py  code.py  code_system.py  enums.py  relationship.py
quarum/generators/: __init__.py  plantuml.py  report.py
quarum/nlp/: __init__.py  chunking.py  embeddings.py  prompt_builder.py
quarum/phases/: __init__.py  axial_coding.py  open_coding.py  phase_utils.py  selective_coding.py
quarum/pipelines/: __init__.py  base_pipeline.py  domain_modeling.py
quarum/utils/: __init__.py  data_loader.py  json_parsing.py  llm_client.py  validation.py
tests/: test_core.py
