[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quarum"
version = "0.1.0"
description = "QuaRUM: Qualitative Data Analysis-Based Retrieval Augmented UML Domain Model from Requirements Documents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Syed Tauhid Ullah Shah", email = "syed.tauhidullahshah@ucalgary.ca" },
    { name = "Mohamad Hussein", email = "mohamad.hussein@ucalgary.ca" },
]
maintainers = [
    { name = "Mohamad Hussein", email = "mohamad.hussein@ucalgary.ca" },
]
urls = { Homepage = "https://github.com/SyedTauhidUllahShah/QuaRUM" }
keywords = [
    "QuaRUM",
    "Machine Learning",
    "Qualitative Data Analysis",
    "Natural Language Processing",
    "Deep Learning",
    "Requirements",
    "UML",
    "Domain Modeling",
    "Semantic Retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "MIT",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain_openai>=0.0.2",
    "langchain_community>=0.0.1",
    "langchain_text_splitters>=0.0.1",
    "langchain_core>=0.1.0",
    "openai>=1.3.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
]

[project.scripts]
quarum = "quarum.cli:main"

[tool.setuptools]
packages = ["quarum"]

[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = true
skip-magic-trailing-comma = true
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
known_first_party = ["quarum"]
float_to_top = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pylint.'MAIN']
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.typing"]

[tool.pylint.'MESSAGES CONTROL']
enable = [
    "E0402", # relative-beyond-top-level
]
disable = [
    "W0718", # broad-exception-caught
    "W0221", # arguments-differ
]
